--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body
 	width: 300px;
 	height: 350px;
 	margin: 20px;
-	background: #333;
 	border-radius: 20px;
 	transition: 0.5s;
 	transition-delay: 0.5s;
@@ -28,7 +27,7 @@ body
 .card:hover
 {
 	width: 600px;
-	transition-delay: 0s;
+	transition-delay: 0.5s;
 }
 .card .circle
 {
@@ -37,10 +36,39 @@ body
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: red;
 	border-radius: 20px;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .card .circle::before
 {
-
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: var(--clr);
+	clip-path: circle(120px at center);
+	transition-delay: 0.5s;
 }
+.card:hover .circle::before
+{
+	clip-path: circle(400px at center);
+}
+.card .circle .logo
+{
+	position: relative;
+	width: 200px;
+	transition: 0.5s;
+	transition-delay: 0.5s;
+}
+.card:hover .circle .logo
+{
+	transform: scale(0);
+	transition-delay: 0s;
+}
+
+/*7:48
