--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body
 	border-radius: 20px;
 	transition: 0.5s;
 	transition-delay: 0.5s;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 .card:hover
 {
@@ -70,5 +73,20 @@ body
 	transform: scale(0);
 	transition-delay: 0s;
 }
-
-/*7:48
+.content
+{
+	position: relative;
+	width: 60%;
+	left: 20%;
+	padding: 20px 20px 20px 40px;
+	opacity: 0;
+	transition: 0.5;
+	visibility: hidden;
+}
+.card:hover .content
+{
+	left: 0;
+	opacity: 1;
+	visibility: visible;
+	transition-delay: 0.5s;
+}
