--- a/style.css
+++ b/style.css
@@ -90,3 +90,43 @@ body
 	visibility: visible;
 	transition-delay: 0.5s;
 }
+.content h2
+{
+	color: rgb(24, 138, 32);
+	text-transform: uppercase;
+	font-size: 2.5em;
+	line-height: 1em;
+}
+.content p
+{
+	color: #fff;
+	font-size: 0.9em;
+}
+.content a
+{
+	position: relative;
+	color: #111;
+	background: #fff;
+	padding: 10px 20px;
+	border-radius: 10px;
+	margin-top: 10px;
+	display: inline-block;
+	text-decoration: none;
+	font-weight: 500;
+}
+.card .product_img
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%) scale(0);
+	height: 300px;
+	transition: 0.5s;
+	transition-delay: 0s;
+}
+.card:hover .product_img
+{
+	left: 72%;
+	transform: translate(-50,-50%) scale(1);
+	transition-delay: 0.5s;
+}
