--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body
 .card:hover
 {
 	width: 600px;
-	transition-delay: 0.5s;
+	transition-delay: 0s;
 }
 .card .circle
 {
@@ -55,7 +55,7 @@ body
 	height: 100%;
 	background: var(--clr);
 	clip-path: circle(120px at center);
-	transition-delay: 0.5s;
+	transition: 0.5s;
 }
 .card:hover .circle::before
 {
@@ -92,7 +92,7 @@ body
 }
 .content h2
 {
-	color: rgb(24, 138, 32);
+	color: #fff;
 	text-transform: uppercase;
 	font-size: 2.5em;
 	line-height: 1em;
@@ -120,13 +120,13 @@ body
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%) scale(0);
-	height: 300px;
+	height: 350px;
 	transition: 0.5s;
 	transition-delay: 0s;
 }
 .card:hover .product_img
 {
-	left: 72%;
+	left: 82%;
 	transform: translate(-50,-50%) scale(1);
 	transition-delay: 0.5s;
 }
