--- a/style.css
+++ b/style.css
@@ -119,14 +119,18 @@ body
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%,-50%) scale(0);
-	height: 350px;
+	transform: translate(-50%,-50%) scale(1);
+	display: none;
+	height: 500px;
 	transition: 0.5s;
 	transition-delay: 0s;
 }
+
 .card:hover .product_img
 {
+	display: block;
 	left: 82%;
 	transform: translate(-50,-50%) scale(1);
+	transition: 0.5s;
 	transition-delay: 0.5s;
 }
